架构搭建完成，适配最新代码